[REFACTOR] Reconfiguring swagger
