# models/todos.go
@@ -5,3 +5,8 @@ type Todos struct {
 	Title     string `gorm:"type:varchar(300)" json:"title"`
 	Completed bool   `gorm:"type:boolean" json:"completed"`
 }
+
+type CreateTodos struct {
+	Title     string `gorm:"type:varchar(300)" json:"title"`
+	Completed bool   `gorm:"type:boolean" json:"completed"`
+}
